lib/velosiparser/tests/vrs/interface/layout_02_wrong_slice_expected.txt
error: expected `..`, found `-`
     --> tests/vrs/interface/layout_02_wrong_slice.vrs:1:3
      |
    1 |  0 - 1 foo
      |    ^ help: add `..` here.
